style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
}

nav {
  position: fixed;
  display: flex;
  z-index: 1;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  padding: 0.4rem 4rem;
  background: white;
  box-shadow: 0.5px 0.5px 5px rgb(196, 196, 196);
}

div.logo-name {
  display: flex;
  column-gap: 0.5rem;
  justify-content: space-between;
}

div.logo img {
  width: 30px;
  height: auto;
}

div.name p {
  font-size: 1.3rem;
}

nav div.links {
  display: flex;
  column-gap: 1rem;
}
nav div.links a.work {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #06f;
  background: transparent;
  font-weight: bold;
  border: none none none;
  border-radius: none;
}
nav div.links a.work:hover {
  color: #0052cc;
  background: aliceblue;
}
nav div.links a.sign-in {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #06f;
  background: transparent;
  font-weight: bold;
  border: solid 1px #d1d1d1;
  border-radius: 0.3rem;
}
nav div.links a.sign-in:hover {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #0052cc;
  background: rgb(241, 241, 241);
  font-weight: bold;
  border: solid 1px dodgerblue;
  border-radius: 0.3rem;
}
nav div.links a.create-acc, nav div.links a.get-gmail {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: white;
  background: #06f;
  font-weight: bold;
  border: none none none;
  border-radius: 0.3rem;
}
nav div.links a.create-acc:hover, nav div.links a.get-gmail:hover {
  color: "inherit";
  background: #1337c0;
}
nav div.links a.get-gmail {
  display: none;
}

a.work {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #06f;
  background: transparent;
  font-weight: bold;
  border: none none none;
  border-radius: none;
}

a.work:hover {
  color: #0052cc;
  background: aliceblue;
}

a.sign-in {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #06f;
  background: transparent;
  font-weight: bold;
  border: solid 1px #d1d1d1;
  border-radius: 0.3rem;
}

a.sign-in:hover {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #0052cc;
  background: rgb(241, 241, 241);
  font-weight: bold;
  border: solid 1px dodgerblue;
  border-radius: 0.3rem;
}

a.create-acc, a.get-gmail {
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: white;
  background: #06f;
  font-weight: bold;
  border: none none none;
  border-radius: 0.3rem;
}

a.create-acc:hover, a.get-gmail:hover {
  color: "inherit";
  background: #1337c0;
}

a.get-gmail {
  display: none;
}

section#section-1 {
  width: 100%;
  margin: 0 auto 16rem auto;
  padding: 4rem 0 0 4rem;
}

div.section-1 {
  display: flex;
  justify-content: space-between;
  column-gap: 4rem;
  overflow-x: hidden;
}

div.section-1 div.item-1 {
  width: 40%;
  align-self: center;
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
}

div.section-1 div.item-1 div.text {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
}

div.section-1 div.item-1 div.text h1 {
  font-size: 3.1rem;
}

div.section-1 div.item-2 {
  width: 50%;
}

div.section-1 div.item-2 div img {
  width: 900px;
  align-self: flex-start;
}

section#section-2 {
  width: 100%;
  margin: 0 auto 6rem auto;
  padding: 0 0 0 4rem;
  overflow-x: hidden;
}

div.section-2 {
  display: flex;
  justify-content: space-between;
}

div.section-2 div.item-1 {
  width: 45%;
  display: flex;
  flex-direction: column;
  row-gap: 4rem;
  align-self: flex-start;
}

div.section-2 div.item-1 h1 {
  font-size: 2.4rem;
}

div.features {
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
  cursor: pointer;
}

div.features > div {
  display: flex;
  column-gap: 1.5rem;
}

div.features > div > span {
  background: #eef0f1;
  padding: 0.1rem;
  border: none;
  transition: ease all 0.5s;
}

div.feature {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

div.feature p.header {
  font-weight: bold;
  font-size: 1.2rem;
  color: #606060;
  cursor: pointer;
}

div.feature p.description {
  font-size: 0.95rem;
  color: #606060;
}

div.section-2 div.item-2 {
  align-self: center;
  width: 50%;
}

div.section-2 div.item-2 img {
  width: 750px;
}

section#section-3 {
  width: 90%;
  margin: 0 0 8rem 0;
}

div.section-3 {
  display: flex;
  justify-content: space-between;
}

div.section-3 div.item-1 {
  position: relative;
}

div.section-3 div.item-1 img {
  width: 700px;
  position: absolute;
  left: -100px;
  top: 100px;
}

div.section-3 div.item-2 {
  width: 30%;
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  row-gap: 4rem;
}

div.section-3 div.item-2 div.text h1 {
  font-size: 2.4rem;
}

section#section-4 {
  width: 100%;
  background: #f7f8f8;
  padding: 6rem;
}

div.section-4 {
  display: flex;
  justify-content: space-between;
}

div.section-4 div {
  width: 30%;
  display: flex;
  flex-direction: column;
  row-gap: 2rem;
}

div.section-4 > div > p:first-child {
  font-weight: bold;
  font-size: 1.3rem;
}

div.section-4 p.description {
  color: #606060;
}

section#section-5 {
  padding: 6rem 0;
  width: 89%;
  margin: 0 auto;
  text-align: center;
}

div.section-5 {
  display: flex;
  flex-direction: column;
  align-items: center;
}

div.section-5 h1 {
  font-size: 2.5rem;
  margin-bottom: 1.5rem;
}

div.section-5 p {
  color: #606060;
}

div.section-5 p:nth-child(2) {
  font-size: 1.05rem;
  margin-bottom: 2.5rem;
}

div.section-5 a {
  margin-top: 3rem;
  text-decoration: none;
  padding: 0.7rem 1rem;
  color: #06f;
  background: transparent;
  font-weight: bold;
  border: none none none;
  border-radius: 0;
}

div.section-5 a:hover {
  color: #0052cc;
  background: transparent;
}

div.section-5 > p:nth-of-type(2) {
  font-weight: bold;
}

div.services {
  display: flex;
  column-gap: 2rem;
  margin: 1rem 0 3rem 0;
}

section.table {
  width: 95%;
  margin: 0 auto;
}

div.table table {
  border-collapse: collapse !important;
  margin: 0 auto;
}
/* ... */

